<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/secondapply_2a"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="42dp"
        android:background="@drawable/header_background"
        android:paddingLeft="@dimen/a_about_u"
        android:text="@string/bpage"
        android:textColor="#006064"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="543dp"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/apply_2b"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_you"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/mobile_no_2h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mobileNo"
            android:layout_marginTop="5sp"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/mobile_no_2h2"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:height="48dp"
            android:autofillHints=""
            android:hint="@string/mobileno2"
            android:inputType="number" />
        <TextView
            android:id="@+id/your_province_2c"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/enter_province"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/your_province_2c2"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:height="48dp"
            android:autofillHints=""
            android:hint="@string/enter_province2"
            android:inputType="text" />

        <TextView
            android:id="@+id/your_distric_2d"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/your_distric"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/your_distric_2d2"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:height="48dp"
            android:autofillHints=""
            android:hint="@string/your_distric2"
            android:inputType="text" />

        <TextView
            android:id="@+id/your_city_2e"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/your_city"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/your_city_2e2"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:height="48dp"
            android:autofillHints=""
            android:hint="@string/your_city2"
            android:inputType="text" />

        <TextView
            android:id="@+id/your_address_2f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/your_address"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/your_address_2f2"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:height="48dp"
            android:autofillHints=""
            android:hint="@string/your_addres"
            android:inputType="text" />

        <TextView
            android:id="@+id/live_there_2g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/live_there"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/live_there_2g2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/livethere" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <Button
            android:id="@+id/Back_2a"
            android:layout_width="100dp"
            android:layout_height="48sp"
            android:layout_marginTop="40sp"
            android:background="@drawable/button_background"
            android:hint="@string/back"
            android:textColorHint="?android:attr/detailsElementBackground" />

        <Button
            android:id="@+id/next_2a"
            android:layout_width="100dp"
            android:layout_height="48sp"
            android:layout_marginLeft="150sp"
            android:layout_marginTop="40sp"
            android:background="@drawable/button_background"
            android:hint="@string/next2"
            android:textColor="@color/white"
            android:textColorHint="?android:attr/detailsElementBackground" />
    </LinearLayout>

</LinearLayout>

