<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ksactivities.ks_ApplyLoan">

    <TextView
        android:id="@+id/apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:height="42dp"
        android:background="@drawable/header_background"
        android:paddingLeft="@dimen/a_about_u"
        android:text="@string/quick"
        android:textColor="#006064"
        android:textSize="25sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/full_Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fullName"
            android:textColor="@color/black"
            android:layout_marginTop="15sp"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/full_Name_2"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:height="48dp"
            android:autofillHints=""
            android:hint="@string/fullName2"
            android:inputType="text"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/nic_No"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/nic_no"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/nic_No_2"
            android:layout_width="380dp"
            android:layout_height="48sp"
            android:height="48dp"
            android:autofillHints=""
            android:hint="@string/nicNo"
            android:inputType="number|text"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/mobile_No"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/mobiles"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/mobile_No_2"
            android:layout_width="380dp"
            android:layout_height="48sp"
            android:height="48dp"
            android:autofillHints=""
            android:hint="@string/mobiless"
            android:inputType="number|text"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/email_address"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <EditText
            android:id="@+id/email_2"
            android:layout_width="380dp"
            android:layout_height="48sp"
            android:height="48dp"
            android:autofillHints=""
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/your_Address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/your_address"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/your_Address_2"
            android:layout_width="380dp"
            android:layout_height="48dp"
            android:height="48dp"
            android:autofillHints=""
            android:hint="@string/your_addres"
            android:inputType="text" />

        <TextView
            android:id="@+id/how_much"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/barrow"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/how_much_2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/barrow" />

        <TextView
            android:id="@+id/how_long"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:text="@string/howlong"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/how_long_2"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:entries="@array/howlong" />

        <Button
            android:id="@+id/submit_a"
            android:layout_width="120dp"
            android:layout_height="48sp"
            android:layout_marginStart="115dp"
            android:layout_marginTop="40sp"
            android:backgroundTint="@color/colorPrimary"
            android:shadowColor="@color/colorPrimaryDark"
            android:text="@string/submit" />
    </LinearLayout>

</LinearLayout>